# FASTQuick

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  BwtIndexer.cpp  BwtIndexer.h  BwtMapper.cpp  BwtMapper.h  CMakeLists.txt  Dockerfile  Error.h  FastPopCon.vcxproj  FastPopCon.vcxproj.filters  FastqA.cpp  LICENSE  Makefile  Makefile.am  Makefile.in  README  Readme.md  RefBuilder.cpp  RefBuilder.h  StatCollector.cpp  StatCollector.h  Utility.h  _config.yml  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  index.html  index.md  makefile  makefile.backup  params.cpp  (+1 more)
VerifyBamID/: CMakeLists.txt  ContaminationEstimator.cpp  SVDcalculator.cpp  SimplePileupViewer.cpp  vb2Main.cpp  vb2Main.h
VerifyBamID/libVcf/: CMakeLists.txt
VerifyBamID/samtools/: CMakeLists.txt
VerifyBamID/statgen/: MemoryMapArray.h
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
example/: SelectedSite.vcf.gz.tbi  dbsnp.test.vcf.gz.tbi  example.align.sh  example.index.sh  example.pop+con.sh  example.predefine.marker.align.sh  example.predefine.marker.index.sh  example.sh  fake.Pileup.gz.tbi  fake.likelihood  fq.test.list  ref.test.fa.amb  ref.test.fa.ann  ref.test.fa.bwt  ref.test.fa.fai  ref.test.fa.pac  ref.test.fa.sa  run.sh  run.test.sh  test.fa  test.fq.list
libStatGen-master/Makefiles/: Makefile.include
libStatGen-master/general/: StringHash.cpp  StringHash.h
libStatGen-master/vcf/: VcfRecordDiscardRules.h
libbwa/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  bamlite.c  bamlite.h  bntseq.c  bntseq.h  bwape.c  bwape.h  bwase.c  bwase.h  bwaseqio.c  bwt.c  bwt.h  bwt_gen.c  bwtaln.c  bwtaln.h  bwtgap.c  bwtgap.h  bwtio.c  bwtmisc.c  cs2nt.c  is.c  khash.h  kseq.h  ksort.h  kstring.c  kstring.h  kvec.h  stdaln.c  stdaln.h  utils.c  utils.h
libbwa/.deps/: bamlite.Po  bntseq.Po  bwape.Po  bwase.Po  bwaseqio.Po  bwt.Po  bwtaln.Po  bwtgap.Po  bwtio.Po  bwtmisc.Po  cs2nt.Po  is.Po  kstring.Po  libbwa_a-bamlite.Po  libbwa_a-bntseq.Po  libbwa_a-bwape.Po  libbwa_a-bwase.Po  libbwa_a-bwaseqio.Po  libbwa_a-bwt.Po  libbwa_a-bwtaln.Po  libbwa_a-bwtgap.Po  libbwa_a-bwtio.Po  libbwa_a-bwtmisc.Po  libbwa_a-cs2nt.Po  libbwa_a-is.Po  libbwa_a-kstring.Po  libbwa_a-stdaln.Po  libbwa_a-utils.Po  stdaln.Po  utils.Po
libmpu/: BaseAsciiMap.cpp  BaseAsciiMap.h  CMakeLists.txt  Constant.h  Error.h  Makefile  Makefile.am  Makefile.in  MathConstant.h  MathGold.cpp  MathGold.h  MathMatrix.cpp  MathMatrix.h  MathVector.cpp  MathVector.h  Parameters.cpp  PhredHelper.cpp  PhredHelper.h  Random.cpp  Random.h  Sort.cpp  Sort.h  bam_endian.h  bedidx.c  bgix.h  bgzip.c  boolExprParser.h  boolParser.cpp  boolParser.h  config.h  config.h.in  config.status  configure.ac  fPed.h  fVcf.cpp  fVcf.h  index.c  khash.h  knetfile.c  knetfile.h  (+20 more)
libmpu/.deps/: BaseAsciiMap.Po  MathMatrix.Po  MathVector.Po  Sort.Po  bedidx.Po  fVcf.Po  index.Po  knetfile.Po  kstring.Po  mbgzf.Po  mpuMixupLikelihoods.Po  mpuPileBases.Po  mpuTool.Po  mpuVerify.Po  tabix.Po
libmpu/autom4te.cache/: output.1  requests  traces.0  traces.1
libmpu/scripts/: Makefile  Makefile.am  Makefile.in  capt  capt-genotype  capt-pileup  capt-set-genotype  capt-verify  capt-verify-merge
libmpu/src/: Constant.h  Makefile  Makefile.am  Makefile.in  MathVector.h  boolParser.cpp  boolParser.h  fVcf.h  mpuFile.h  mpuPileBases.cpp  mpuTool.cpp  mpuTool.h  pFile.h  wFile.h
libmpu/src/.deps/: Error.Po  MathGenMin.Po  MathGold.Po  Parameters.Po  PhredHelper.Po  Random.Po  bgzf.Po  bgzip.Po  boolParser.Po  index.Po  mpuPileBases.Po  mpuTool.Po  mpuVerify.Po  tabix.Po
libmpu/src_bk/: Makefile  Makefile.am  Makefile.in  MathVector.cpp  fVcf.h  mbgzf.c  mpuMixupLikelihoods.cpp
misc/: CMakeLists.txt  Error.cpp  Error.h  Makefile  Makefile.am  Makefile.in  faidx.c  faidx.h  khash.h  knetfile.h  pException.h  params.cpp  params.h  razf.c  razf.h
misc/.deps/: faidx.Po  libmisc_a-Error.Po  libmisc_a-params.Po  razf.Po
misc/bam/: CMakeLists.txt  Makefile.am  Makefile.in
misc/general/: CMakeLists.txt  Error.cpp  Makefile.am  Makefile.in  e.list
misc/vcf/: CMakeLists.txt  Makefile.am  Makefile.in  VcfFile.cpp  VcfHeader.cpp
misc/vcfast/: Makefile.am  Makefile.in  vcfast  vcfast.cpp
resource/: 1000g.phase3.100k.b37.vcf.gz.dat.V  1000g.phase3.100k.b37.vcf.gz.dat.bed  1000g.phase3.100k.b37.vcf.gz.dat.mu  1000g.phase3.100k.b37.vcf.gz.gzi  1000g.phase3.10k.b37.vcf.gz.UD  1000g.phase3.10k.b37.vcf.gz.V  1000g.phase3.10k.b37.vcf.gz.dat.bed  1000g.phase3.10k.b37.vcf.gz.dat.mu  1000g.phase3.10k.b37.vcf.gz.gzi  1000g.pop  1kg.phase1.selected.pc2.out  choose.bed  choose.bed.post.bed.allele.bed  hapmap_3.3.b37.dat.UD  hapmap_3.3.b37.dat.V  phase1_integrated_calls.20101123.ALL.panel  relationships_w_pops_041510.txt
resource/exome/: 1000g.phase3.10k.b37.exome.vcf.gz.UD  1000g.phase3.10k.b37.exome.vcf.gz.V  1000g.phase3.10k.b37.exome.vcf.gz.bed  1000g.phase3.10k.b37.exome.vcf.gz.mu
samtools-faidx/: razf.c
src/: BwtIndexer.cpp  BwtIndexer.h  BwtMapper.cpp  BwtMapper.h  CMakeLists.txt  ContaminationEstimator.cpp  ContaminationEstimator.h  ContaminationEstimator2.cpp  ContaminationEstimator2.h  FASTQuick.cpp  FastqA.cpp  InsertSizeEstimator.cpp  InsertSizeEstimator.h  Makefile  Makefile.am  Makefile.in  PopulationIdentifier.cpp  PopulationIdentifier.h  RefBuilder.cpp  RefBuilder.h  RegionList.cpp  RegionList.h  StatCollector.cpp  StatCollector.h  TargetRegion.cpp  TargetRegion.h  Utility.h  Version.h
src/.deps/: FastqA-BwtIndexer.Po  FastqA-BwtMapper.Po  FastqA-FastqA.Po  FastqA-RefBuilder.Po  FastqA-StatCollector.Po
test/: CMakeLists.txt  alltests.cpp
