AUTOMAKE_OPTIONS=foreign     

noinst_LIBRARIES=libbwa.a

libbwa_a_SOURCES=bamlite.c bntseq.c bwape.c bwase.c bwaseqio.c bwtaln.c bwt.c bwtgap.c bwtio.c bwtmisc.c cs2nt.c is.c kstring.c stdaln.c utils.c

libbwa_a_LIBADD=

libbwa_a_CFLAGS= -x c++ -lpthread -lz -O4    -Wall  -DHAVE_PTHREAD  -Wno-unused-but-set-variable -Wno-unused-variable -mmmx -msse -msse2 -msse3 -fpermissive 

